# betfairstreamer

./: .gitignore  .pylintrc  Dockerfile  Dockerfile.development  README.md  mypy.ini  pyproject.toml  requirements.in  requirements.txt  run.sh  setup.py  tox.ini
benchmark/: historical.py  read_from_connection.py
betfairstreamer/: __init__.py  api_client.py  betfair_api.py  cache.py  client.py  definitions.py  models.py  server.py  stream.py  utils.py
betfairstreamer/backtest/: backtest.py
betfairstreamer/betfair/: definitions.py  enums.py  models.py
betfairstreamer/cache/: market_book.py  market_cache.py  order_book.py  order_cache.py
betfairstreamer/helpers/: stream_helpers.py
betfairstreamer/models/: betfair_api.py  betfair_api_extensions.py  market_book.py  market_cache.py  order_book.py  order_cache.py
betfairstreamer/resources/: api_messages.py  market_book.py  market_cache.py  order_cache.py
betfairstreamer/stream/: __init__.py  betfair_async_connection.py  betfair_connection.py  betfair_connection_pool.py  pipeline_connection.py  protocols.py  stream_parser.py
betfairstreamer/utils/: api.py
examples/: apiclient.ipynb  historical.ipynb  simple_raw_stream.py  streaming.ipynb
performance_test/: market_cache_performance.py
scripts/: build-release.sh
test/: generators.py  test_betfair_connection.py  test_market_cache.py  test_order_cache.py
tests/: generators.py  test_betfair_connection.py  test_connection_handler.py
